<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity">

    <TextView
        android:id="@+id/tvVenueName"
        android:layout_width="341dp"
        android:layout_height="42dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/twVenueName_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivBestPhoto"
        android:layout_width="249dp"
        android:layout_height="199dp"
        android:layout_marginTop="104dp"
        android:contentDescription="bestimage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bGallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/show_gallery"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvDescritption"
        android:layout_width="325dp"
        android:layout_height="74dp"
        android:layout_marginTop="16dp"
        android:scrollbars="vertical"
        android:text="@string/tvDescription_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivBestPhoto" />

    <TextView
        android:id="@+id/tvAddress"
        android:layout_width="231dp"
        android:layout_height="47dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="40dp"
        android:text="@string/tvAddress_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDescritption" />

    <TextView
        android:id="@+id/tvRating"
        android:layout_width="232dp"
        android:layout_height="39dp"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="144dp"
        android:text="@string/tvRating_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAddress"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>